@@ -66,8 +66,6 @@ function &wfGetCache( $inputType ) {
 				$wgCaches[CACHE_ACCEL] = new APCBagOStuff;
 			} elseif( function_exists( 'xcache_get' ) ) {
 				$wgCaches[CACHE_ACCEL] = new XCacheBagOStuff();
-			} elseif ( function_exists( 'mmcache_get' ) ) {
-				$wgCaches[CACHE_ACCEL] = new TurckBagOStuff;
 			} else {
 				$wgCaches[CACHE_ACCEL] = false;
 			}
